<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nos2jdbc.tutorial</groupId>
  <artifactId>nos2jdbc-tutorial-spring</artifactId>
  <version>1.9.9</version>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>

    <nos2jdbc.version>1.9.9</nos2jdbc.version>

    <entityPathPart>entity</entityPathPart>
  </properties>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.0</version>
  </parent>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-tx</artifactId>
    </dependency>

    <dependency>
      <groupId>jakarta.transaction</groupId>
      <artifactId>jakarta.transaction-api</artifactId>
    </dependency>
    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>

    <dependency>
      <groupId>com.github.ns2j</groupId>
      <artifactId>nos2jdbc-core</artifactId>
      <version>${nos2jdbc.version}</version>
    </dependency>


    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.6.1</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>nos2jdbc.tutorial.spring.Main</mainClass>
          <cleanupDaemonThreads>false</cleanupDaemonThreads>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-antrun-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>com.github.ns2j</groupId>
            <artifactId>nos2jdbc-gen</artifactId>
            <version>${nos2jdbc.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <target>
            <property name="plugin_classpath" refid="maven.plugin.classpath" />
            <property name="runtime_classpath"
              refid="maven.runtime.classpath" />
            <property name="test_classpath" refid="maven.test.classpath" />
            <echo message="plugin classpath:  ${plugin_classpath}" />
            <echo message="runtime classpath:  ${runtime_classpath}" />
            <echo message="test classpath:  ${test_classpath}" />
            <ant antfile="${basedir}/nos2jdbc-gen-build.xml"
              target="${ant.target}" inheritRefs="true" />
          </target>
        </configuration>
        <goals>
          <goal>run</goal>
        </goals>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>compile-least</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <includes>
                <!-- path start from src/main/java -->
                <include>**/${entityPathPart}/**/*.java</include>
              </includes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
